<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/product_name_TextView"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_description_TextView"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_cost_TextView"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="18sp"

            android:textStyle="bold" />
        <TextView
            android:id="@+id/product_quantity_TextView"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_total_price_TextView"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="18sp"

            android:textStyle="bold" />

        <!-- Other views like TextView for order details -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>